--- a/frontend-site/home.html
+++ b/frontend-site/home.html
@@ -15,7 +15,7 @@
     <div id="sidebar">
       <img src="images/R-C.png" alt="Logo">
       <span>INFUMAS</span>
-      <a href="./home">首页</a>
+      <a href="./home.html">首页</a>
       <a href="./aboutus.html">关于我们</a>
       <a href="#" data-action="add-device">添加设备</a>
       <a href="#" data-action="device-management">设备管理</a>
